fixed homepage margin issue on mobile

--- a/src/global.less
+++ b/src/global.less
@@ -112,3 +112,10 @@ ol {
   }
 
 }
+
+@media only screen and (max-width: 480px) {
+  .ant-pro-page-container-children-content {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
